fixup Stop category gap being different

--- a/web/cobrands/sass/_base.scss
+++ b/web/cobrands/sass/_base.scss
@@ -2092,10 +2092,6 @@ label .muted {
   display: inline-block;
 }
 
-#form_category_row > label:first-child {
-    margin-top: 0;
-}
-
 .box-warning,
 .extra-category-questions {
   margin: 1em -1em;
